Create response types & update swagger
